# nomad-ikz-plugin

./: README.md  nomad.yaml  pyproject.toml
.github/workflows/: actions.yml  mkdocs-deploy.yml  python-test.yml
IKZ_plugin/: README.md
IKZ_plugin/src/movpe_IKZ/: parser.py  schema.py
src/ikz_plugin/: utils.py
src/ikz_plugin/characterization/: schema.py
src/ikz_plugin/directional_solidification/: parser.py  schema.py
src/ikz_plugin/movpe/: README.md
src/nomad-ikz-plugin/czochralski/: parser.py  schema.py
src/nomad-ikz-plugin/directional_solidification/: parser.py
src/nomad-ikz-plugin/movpe/: README.md  __init__.py  schema.py
src/nomad-ikz-plugin/movpe/movpe1/growth_excel/: parser.py
src/nomad-ikz-plugin/movpe/movpe2/growth_excel/: __init__.py
src/nomad-ikz-plugin/movpe/movpe_app/: __init__.py
src/nomad-ikz-plugin/movpe/substrate/: __init__.py
src/nomad-ikz-plugin/pld/: __init__.py
src/nomad_ikz_plugin.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/nomad_ikz_plugin/characterization/: __init__.py  parser.py  readers.py  schema.py
src/nomad_ikz_plugin/characterization/v1/: __init__.py  schema.py
src/nomad_ikz_plugin/czochralski/: __init__.py  schema.py
src/nomad_ikz_plugin/deprecated/characterization/: __init__.py  readers.py  schema.py
src/nomad_ikz_plugin/directional_solidification/: __init__.py  parser.py  schema.py
src/nomad_ikz_plugin/general/: __init__.py  schema.py
src/nomad_ikz_plugin/mbe/: __init__.py  schema.py
src/nomad_ikz_plugin/movpe/: schema.py
src/nomad_ikz_plugin/movpe/movpe1/: utils.py
src/nomad_ikz_plugin/movpe/movpe1/constant_parameters/: __init__.py  nomad_plugin.yaml  parser.py
src/nomad_ikz_plugin/movpe/movpe1/growth_excel/: __init__.py  parser.py
src/nomad_ikz_plugin/movpe/movpe1/old_growth_excel/: __init__.py  parser.py
src/nomad_ikz_plugin/movpe/movpe1/rcp/: __init__.py  parser.py
src/nomad_ikz_plugin/movpe/movpe1/rcp_parser/: __init__.py  parser.py
src/nomad_ikz_plugin/movpe/movpe2/: utils.py
src/nomad_ikz_plugin/movpe/movpe2/growth_excel/: __init__.py  parser.py
src/nomad_ikz_plugin/movpe/movpe_app/: __init__.py
src/nomad_ikz_plugin/movpe/substrate/: __init__.py  parser.py  utils.py
src/nomad_ikz_plugin/pld/: custom_import.ipynb  schema.py
src/nomad_ikz_plugin/pld/pld_app/: __init__.py
tests/: conftest.py  test_characterization.py  test_deprecated.py
tests/characterization/transmission/: conftest.py  test_parser.py
tests/data/characterization/transmission/: Si.0  setup_aliases.archive.json
tests/data/characterization/transmission/backcompatibility/: KTF-D.Probe.Raw.archive.json  MySample.archive.json  instrument.archive.json  sphere_test01ProbeRaw.archive.json
tests/data/characterization/transmission/extra/: Quarz.0
tests/data/deprecated/characterization/: KTF-DProbeRaw.archive.json  setup_aliases.archive.json  sphere_test01ProbeRaw.archive.json
tests/data/directional_solidification/: G1_IKZ_NSI_23.ds.manualprotocol.xlsx
tests/data/movpe/movpe1/: (Sr-Ca)O2-FE220-04.rcp
tests/data/movpe/movpe1/growth_excel/: MOVPE Parameters test.xlsx
tests/data/pld/: test_ikz_pld_substrate_batch.archive.yaml  test_ikz_pulsed_laser_deposition.archive.yaml
