[build-system]
requires = [
    "setuptools>=61.0.0",
    "setuptools-scm>=8.0",
]
build-backend = "setuptools.build_meta"

[project]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]
name = "nomad-ikz-plugin"
dynamic = ["version"]
description = "A plugin for NOMAD containing IKZ use cases."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Hampus Näsström", email = 'hampus.naesstroem@physik.hu-berlin.de' },
    { name = "Andrea Albino", email = 'andrea.albino@physik.hu-berlin.de' },
    { name = "Sarthak Kapoor", email = 'sarthak.kapoor@ikz-berlin.de' },
    { name = "Sebastian Brückner", email = 'sebastian.brueckner@ikz-berlin.de' },
]
license = { file = "LICENSE" }
dependencies = [
    'nomad-lab>=1.3.1',
    'nomad-material-processing',
    'nomad-measurements',
    'nomad-analysis', # develop branch
    'lakeshore-nomad-plugin @ git+https://github.com/IKZ-Berlin/lakeshore-nomad-plugin.git@69a6deb3f0e99d7b0dc66714105dd62a56f157e9',
    'laytec_epitt_plugin @ git+https://github.com/IKZ-Berlin/laytec_epitt_nomad_plugin.git@f4953ac4ecb55b7003dee323d7d7f473e49ab4e3',
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "structlog",
    "python-logstash>=0.4.6",
]

[project.urls]
"Homepage" = "https://github.com/IKZ-Berlin/nomad-ikz-plugin"
"Bug Tracker" = "https://github.com/IKZ-Berlin/nomad-ikz-plugin/issues"

[tool.uv]
index-url = "https://gitlab.mpcdf.mpg.de/api/v4/projects/2187/packages/pypi/simple"

[tool.ruff]
include = ["src/*.py", "tests/*.py"]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4


[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # isort
    "I",
    # pylint
    "PL",
]

ignore = [
    "E501",    # Line too long ({width} > {limit} characters)
    "E701",    # Multiple statements on one line (colon)
    "E731",    # Do not assign a lambda expression, use a def
    "E402",    # Module level import not at top of file
    "PLR0911", # Too many return statements
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments in function definition
    "PLR0915", # Too many statements
    "PLR2004", # Magic value used instead of constant
    "PLW0603", # Using the global statement
    "PLW2901", # redefined-loop-name
    "PLR1714", # consider-using-in
    "PLR5501", # else-if-used
    "F403", # 'from module import *' used; unable to detect undefined names
]

fixable = ["ALL"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# this is entirely optional, you can remove this if you wish to
[tool.ruff.format]
# use single quotes for strings.
quote-style = "single"

# indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[project.entry-points.'nomad.plugin']
general_schema = "nomad_ikz_plugin.general:schema"
characterization_schema = "nomad_ikz_plugin.characterization:schema"
characterization_transmission_parser = "nomad_ikz_plugin.characterization:transmission_parser"
deprecated_characterization_schema = "nomad_ikz_plugin.deprecated.characterization:schema"
pld_schema = "nomad_ikz_plugin.pld:schema"
movpe_schema = "nomad_ikz_plugin.movpe:schema"
movpe2_growth_excel_parser = "nomad_ikz_plugin.movpe.movpe2.growth_excel:parser"
movpe1_growth_excel_parser = "nomad_ikz_plugin.movpe.movpe1.growth_excel:parser"
substrate_excel_parser = "nomad_ikz_plugin.movpe.substrate:parser"
mbe_schema = "nomad_ikz_plugin.mbe:schema"
#dir_sol_schema = "nomad_ikz_plugin.directional_solidification:schema"
#dir_sol_manual_protocol_excel_parser = "nomad_ikz_plugin.directional_solidification:manual_protocol_parser"
#dir_sol_digital_protocol_excel_parser = "nomad_ikz_plugin.directional_solidification:digital_protocol_parser"
czochralski_schema = "nomad_ikz_plugin.czochralski:schema"
czochralski_multilog_parser = "nomad_ikz_plugin.czochralski:parser"
movpe_substrate_app = "nomad_ikz_plugin.movpe.movpe_app:movpesubstrateapp"
movpe_growth_run_app = "nomad_ikz_plugin.movpe.movpe_app:movpegrowthrunapp"
movpe_layers_app = "nomad_ikz_plugin.movpe.movpe_app:movpelayersapp"

[tool.setuptools_scm]
